--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
+spring.batch.jdbc.initialize-schema=always
+
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 
 
